# twnw-playground

./: README.md  abstract_page.py  pyproject.toml  requirements.txt  semantha_lit.py
.streamlit/: config.toml
data/: read_config.py
data/magicsort/: config.toml
data/magicsort/bill/: data.xlsx
data/magicsort/bill/broad/: broad_doc_map.json  broad_map.json
data/magicsort/bill/fine/: fine_doc_map.json
data/magicsort/gri_vs_esrs/broad/: broad_excel.xlsx  broad_map.json
data/magicsort/gri_vs_esrs/fine/: fine_excel.xlsx  fine_map.json
data/magicsort/newsticker/broad/: broad_doc_map.json  broad_map.json
data/magicsort/newsticker/fine/: fine_excel.xlsx  fine_map.json
data/magicsort/startups/: data.xlsx  library_Startups_ML.xlsx
data/magicsort/startups/broad/: broad_map.json
data/magicsort/startups/fine/: fine_excel.xlsx  fine_map.json
data/magicsort/uk_legislations/broad/: broad_map.json
data/magicsort/uk_manifestos/: data.xlsx
data/magicsort/uk_manifestos/broad/: broad_doc_map.json  broad_excel.xlsx  broad_map.json
data/magicsort/uk_manifestos/fine/: fine_doc_map.json  (+1 more)
data/rag/: config.toml
data/semantic_compare/: config.toml
data/semantic_search/: config.toml
data/smartcluster/gri_vs_esrs/: data.xlsx
semantha/: SemanthaConnector.py
src/: abstract_page.py  semantha_lit.py
src/semantha/: SemanthaConnector.py
src/subpage/: magicsort.py  rag.py  semantic_compare.py  semantic_search.py  semantic_search_semantha.py  smart_cluster.py
subpage/: boosting.py  magicsort.py  omd.py  semantic_compare.py  semantic_search_semantha.py
(+15 files in other folders)
