[tool.poetry]
name = "semantha playground"
version = "0.1.0"
description = "Semantha Playground"
authors = ["Sebastian Weigelt <sebastian.weigelt@semantha.ai>", "Niko Dürr <niko@semantha.ai>"]
homepage = "http://www.semantha.ai"
license = "Apache 2.0"
readme = "README.md"
packages = [{include="src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.25.1"
openpyxl = "3.1.2"
pandas = "2.0.3"
Pillow = "9.5.0"
plotly = "5.14.1"
requests = "2.31.0"
requests-futures = "1.0.0"
streamlit = "1.25.0"
urllib3 = "1.26.12"
tabulate = "0.9.0"
semantha_sdk = "5.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
